--- a/templates/blog/post_lists.html
+++ b/templates/blog/post_lists.html
@@ -1,64 +1,27 @@
-{% load static %}
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Blog_list</title>
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'css/style.css' %}"
-    />
-    <link
-      rel="stylesheet"
-      type="text/css"
-      href="{% static 'css/bootstrap.min.css' %}"
-    />
-  </head>
-  <body>
-    <div class="header">
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="{% url 'blog:post_list' %}">Blog</a>
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-toggle="collapse"
-          data-target="#navbarNav"
-          aria-controls="navbarNav"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="{% url 'blog:post_list' %}"
-                >Home </a
-              >
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="{% url 'blog:post_new' %}">New</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    <div class="container">
-    <h1>Post List</h1>
-    <hr>
-    <p>총 게시글 수 : {{ posts.count }}</p>
-    <ul>
-      {% for post in posts %}
-      <li>
+{% extends "base.html" %} {% block content %}
+<div class="container">
+  {% if posts %}
+  <ul class="list">
+    {% for post in posts %}
+    <li class="item">
+      <h3>
         <a href="{% url 'blog:post_details' post.id %}">{{ post.title }}</a>
-        <p>내용 : {{ post.content | truncatewords:20 }}</p>
-        <p>생성 날짜 : {{ post.created_at }}</p>
-        <p>수정 날짜 : {{ post.updated_at }}</p>
-        <p>작성자 : {{ post.author }}</p>
-      </li>
-      {% endfor %}
-    </ul>
-  </div>
-
-  </body>
-  <script src="{% static 'js/bootstrap.min.js' %}"></script>
-</html>
+      </h3>
+      <div class="content">내용 : {{ post.content | truncatewords:20 }}</div>
+      <div class="info">
+        <div class="created-date">
+          <span>생성날짜 | </span>{{ post.created_at }}
+        </div>
+        <div class="updated-date">
+          <span>수정날짜 | </span>{{ post.updated_at }}
+        </div>
+        <div class="author"><span>작성자 | </span>{{ post.author }}</div>
+      </div>
+    </li>
+    {% endfor %}
+  </ul>
+  {% else %}
+  <h1 class="not-found-post">게시글이 없습니다.</h1>
+  {% endif %}
+</div>
+{% endblock %}
