--- a/templates/blog/post_new.html
+++ b/templates/blog/post_new.html
@@ -1,14 +1,32 @@
-<html>
-  <head>
-    <title>새 포스트 만들기</title>
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-  </head>
-  <body>
-    <h1>new Post</h1>
-    <form action="create_process.php" method="post">
-      <p><input type="text" name="title" placeholder="제목" /></p>
-      <p><textarea name="description" placeholder="본문"></textarea></p>
-      <p><input type="submit" /></p>
-    </form>
-  </body>
-</html>
+{% extends 'base.html' %} {% block content %}
+<form action="{%url 'blog:post_new'%}" method="post">
+  {% csrf_token %}
+  <h2 class="post_create">새 글 작성하기</h2>
+  <div class="container">
+    <div class="form-group">
+      <label for="title"><h5>제목</h5></label>
+      <input
+        type="text"
+        class="form-control"
+        id="title"
+        name="title"
+        placeholder="제목을 입력하세요"
+      />
+    </div>
+    <div class="form-group">
+      <label for="content"><h5>내용</h5></label>
+      <textarea
+        class="form-control"
+        id="content"
+        name="content"
+        rows="7"
+        placeholder="내용을 입력하세요"
+      ></textarea>
+    </div>
+    <br />
+    <button type="submit" class="btn btn-primary btn-lg">
+      Create New Post
+    </button>
+  </div>
+</form>
+{% endblock %}
