--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -1,60 +1,70 @@
 .header {
-  background-color: bisque;
-  color: white;
-  padding: 20px 30px;
-  border-bottom: 5px solid #2e3e4e;
-  margin-bottom: 20px;
+    background-color: bisque;
+    color: white;
+    padding: 20px 30px;
+    border-bottom: 5px solid #2e3e4e;
+    margin-bottom: 20px;
 }
 
 .header h1 {
-  font-size: 40px;
-  font-weight: bolder;
-  margin: 0;
-  margin-bottom: 10px;
-  padding: 0;
+    font-size: 40px;
+    font-weight: bolder;
+    margin: 0;
+    margin-bottom: 10px;
+    padding: 0;
 }
 
-.not-found-post{
+.not-found-post {
     padding: 20px 30px;
     text-align: center;
     font-size: 35px;
     font-weight: bolder;
     margin-bottom: 10px;
     /* padding: 0; */
-    
+
 }
 
 .post_create {
-  padding: 20px 30px;
-  text-align: center;
-  font-size: 35px;
-  font-weight: bolder;
-  margin-bottom: 10px;
-  /* padding: 0; */
+    padding: 20px 30px;
+    text-align: center;
+    font-size: 35px;
+    font-weight: bolder;
+    margin-bottom: 10px;
+    /* padding: 0; */
+}
+
+.post_update {
+    padding: 20px 30px;
+    text-align: center;
+    font-size: 35px;
+    font-weight: bolder;
+    margin-bottom: 10px;
+    /* padding: 0; */
+
 }
 
 a:hover {
-  text-decoration: none;
+    text-decoration: none;
 }
 
 .item h3 {
-  font-weight: bolder;
+    font-weight: bolder;
 }
 
 .item {
-  padding-bottom: 15px;
-  overflow: hidden;
-  border-bottom: 2px solid #2e3e4e;
+    padding-bottom: 15px;
+    overflow: hidden;
+    border-bottom: 2px solid #2e3e4e;
 }
 
 .info {
-  display: inline-block;
-  color: #827e7e;
-  margin-top: 10px;
-  font-size: 15px;
+    display: inline-block;
+    color: #827e7e;
+    margin-top: 10px;
+    font-size: 15px;
 }
 
 .info span {
-  margin-right: 10px;
-  font-weight: bold;
+    margin-right: 10px;
+    font-weight: bold;
 }
