--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -20,7 +20,6 @@
     font-size: 35px;
     font-weight: bolder;
     margin-bottom: 10px;
-    /* padding: 0; */
 
 }
 
@@ -30,7 +29,6 @@
     font-size: 35px;
     font-weight: bolder;
     margin-bottom: 10px;
-    /* padding: 0; */
 }
 
 .post_update {
@@ -39,11 +37,16 @@
     font-size: 35px;
     font-weight: bolder;
     margin-bottom: 10px;
-    /* padding: 0; */
 
 }
 
 a:hover {
+    text-decoration: none;
+}
+a:link {
+    text-decoration: none;
+}
+a:visited {
     text-decoration: none;
 }
 
