--- a/templates/accounts/signup.html
+++ b/templates/accounts/signup.html
@@ -7,9 +7,8 @@
       {{ form | crispy }}
     </fieldset>
     <div class="form-group">
-      <button class="btn btn-outline-info" type="submit">로그인</button>
+      <button class="btn btn-outline-info" type="submit">회원가입</button>
     </div>
   </form>
-
 </div>
 {% endblock content %}
